# terrace

./: .env.example  .gitignore  LICENSE  README.md  design.txt  opening.xls  pyproject.toml  requirements.txt  setup.py  test.pkl
.github/workflows/: prod.yaml  test.yaml
examples/: calculation.py  examples.py  sample.csv  ta.py  test.py
examples/options/: wheel.py
terrace/: __init__.py  types.py
terrace/calculation/: main.py
terrace/context/: __init__.py  main.py
terrace/data/: __init__.py  context.py  field.py  iex.py  main.py
terrace/data/providers/: __init__.py  csv.py  polygon.py  provider.py
terrace/execute/: alpaca.py
terrace/helpers/: __init__.py  enums.py  ta.py
terrace/index/: __init__.py  component.py  main.py
terrace/strategy/: strategy.py
terrace/trading/: backtest.py  engine.py
tests/: test_core.py
