[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terrace-engine"
version = "0.0.1"
authors = [
  { name="Carter Fulcher", email="carter@fulcheranalytics.io" },
]
description = "an open source algorithmic trading engine optimized for a great developer experience"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/carterfulcher/terrace"
"Bug Tracker" = "https://github.com/carterfulcher/terrace/issues"